--- a/package.json
+++ b/package.json
@@ -16,8 +16,16 @@
   },
   "homepage": "https://github.com/Kyle-Michaels/CCMovieClient#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.4",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-bootstrap": "^2.10.2",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router": "^6.23.1",
+    "react-router-dom": "^6.23.1",
+    "react-scripts": "^5.0.1",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "process": "^0.11.10"
